test/org/midica/testfiles/failing/eff-flow-broken-by-const.midica
INCLUDE inc/instruments.midica


0: vol.wait().set(50)
CONST $x = y
0: .wait.set(50)

